--- a/inference_app/templates/inference_app/base.html
+++ b/inference_app/templates/inference_app/base.html
@@ -16,6 +16,7 @@
           <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="/upload/">Upload</a></li>
           <li class="nav-item"><a class="nav-link" href="/gallery/">Gallery</a></li>
+          <li class="nav-item"><a class="nav-link" href="/upload_gallery/">Uploaded Media</a></li>
         </ul>
       </div>
     </div>
